--- a/pom.xml
+++ b/pom.xml
@@ -34,14 +34,14 @@
 				<configuration>
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.4.0</muleVersion>
-						<username>sudheerreddy7m</username>
-						<password>Msdrjsdk@007</password>
-						<environment>Sandbox</environment>
-						<applicationName>gmail-110</applicationName>
-						<businessGroup>Mulesoft</businessGroup>
-						<workerType>MICRO</workerType>
-						<workers>1</workers>
+						<muleVersion>${mule.version}</muleVersion>
+						<username>${anypoint.username}</username>
+						<password>${anypoint.password}</password>
+						<environment>${env}</environment>
+						<applicationName>${appname}</applicationName>
+						<businessGroup>${business}</businessGroup>
+						<workerType>${vCore}</workerType>
+						<workers>${workers}</workers>
 						<objectStoreV2>true</objectStoreV2>
 					</cloudHubDeployment>
 				</configuration>
